# Rust-ETL

./: Cargo.toml  README.md  config.json  endpoints.json  endpoints_publicos.toml
src/: analysis.rs  api.rs  errors.rs  impl_errors.rs  main.rs  models.rs  processor.rs
