[package]
name = "data_gov"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.1", features = ["blocking", "json"]}
indicatif = "0.18.3"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
polars = { version = "0.45.0", features = ["lazy", "parquet", "json"] }
