[package]
name = "data_gov"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.1", features = ["blocking", "json"]}
indicatif = "0.18.3"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.11+spec-1.1.0"
polars = { version = "0.49.1", features = ["json", "parquet", "lazy", "dtype-struct", "dtype-array"] }
